--- a/theBeginning/.gitignore
+++ b/theBeginning/.gitignore
@@ -1,8 +1,8 @@
 # Virtual environment
 venv/
 
-# Mit projekt, men hvorfor ikke tracke det?
-theBeginning/
+# config filen
+config/
 
 # Python cache files
 *.pyc
